src/test/resources/wacc_examples/invalid/semanticErr/class/simple/mismatchedReferenceTypes.wacc
# attempt to assign variables and function results from class to wrong type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  class c {
    int t,
    char c
    int f(int y) is
        int p = t + 1;
        return x
    end
  }
  c class1 = new c();
  bool t = class1.t;
  bool z = call class1.f(1)
end
